--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to Jumpstart!</h1>
-<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<h1>Welcome to BetaBlog!</h1>
+<p class="lead">This is sample project.<br> And the work is still in progress go on and 
+<%= link_to "SignUp", new_user_registration_path%>, if you already have an accound 
+<%= link_to "LogIn", user_session_path%>.</p>
