--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,18 +1,32 @@
-<div class="page-header">
-  <%= link_to discussions_path, class: 'btn btn-default' do %>
-    All Discussions
-  <% end %>
-  <%= link_to edit_discussion_path(@discussion), class: 'btn btn-primary' do %>
-    Edit
-  <% end %>
-  <h1>Show discussion</h1>
+
+<div class="container mx-auto my-8 px-4">
+  <div class="max-w-2xl ms-auto">
+    <div class="flex justify-between items-center mb-4">
+      <%= link_to 'Discussion',discussions_path, class: 'btn btn-default' %>> <%= @discussion.title %>
+      <% if user_signed_in? && current_user == @discussion.user %>
+        <%= link_to 'Edit',edit_discussion_path(@discussion), class: 'btn btn-primary float-right' %>
+      <% end %>
+    </div>
+
+    <div class="rounded shadow p-5">
+      <%= render @discussion.posts.sorted %>
+      <hr>
+      <% if user_signed_in? %>
+        <div class="md:flex">
+          <div class="mr-4 hidden md:flex-shrink-0 md:block">
+            <%= image_tag avatar_path(current_user), class:"rounded-circle", height: 40, width: 40 %>
+          </div>
+
+          <%= form_with model: [@discussion, Post.new], class: "flex-1 ml-5" do |form|%>
+            <div class="form-group">
+              <%= form.text_area :body, date: { controller: "mentions", targe: "mestions.field" }, class: 'form-control',style:"height: 100px" %>
+            </div>
+
+            <div class="form-group text-right">
+              <%= form.submit "Reply", class:"btn btn-primary", date: [ disable_with: "submitting..."]%>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-<dl class="dl-horizontal">
-  <dt>User:</dt>
-  <dd><%= @discussion.user %></dd>
-
-  <dt>Title:</dt>
-  <dd><%= @discussion.title %></dd>
-
-</dl>
