--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,8 @@
 
     <div class="collapse navbar-collapse" id="navbarMain">
       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-        <li class="nav-item"><%= link_to "Discussion",discussions_path, class: "nav-link"%>
+        <li class="nav-item"><%= link_to "Projects",projects_path, class: "nav-link"%>
+        <li class="nav-item"><%= link_to "Forum",discussions_path, class: "nav-link"%>
       </ul>
 
       <ul class="navbar-nav">
