--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,8 @@
 @import "bootstrap";
 @import "jumpstart/sticky-footer";
 @import "jumpstart/announcements";
+@import 'trix/dist/trix.css';
+@import 'actiontext';
 
 // Fixes bootstrap nav-brand container overlap
 @include media-breakpoint-down(xs) {
@@ -26,4 +28,45 @@ body > .alert {
   &:hover{
     background-color: #f7f7f7;
   }
+}
+
+.edit-paragraph {
+  transition: background-color 0.5s ease;
+  &:hover{
+    background-color: #f8f9fa;
+    cursor: pointer;
+  }
+}
+.image{
+  text-align: center;
+  img{
+   max-width: 80%;
+  }
+  .delete-btn{
+    position: absolute;
+    right: calc(10% + 34px);
+    opacity: 0.7;
+    &:hover{
+      opacity: 1;
+    }
+  }
+}
+
+.post-card{
+  .header-img{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+  }
+}
+.home-card{
+  height: 500px;
+  img{
+    height: 280px;
+  }
+}
+#elements {
+  list-style: none;
+  padding: 0;
 }
