--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,18 @@
 <p class="lead">This is sample project.<br> And the work is still in progress go on and 
 <%= link_to "SignUp", new_user_registration_path%>, if you already have an accound 
 <%= link_to "LogIn", user_session_path%>.</p>
+
+<div class="row">
+  <% @blogs.each do |blog| %>
+    <div class="col-md-6 col-lg-4 col-sm-6">
+        <div class="card home-card mb-3">
+          <img class="card-img-top" src="<%= url_for(blog.header_image)%>" alt="Card image cap">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><%= blog.title %></h5>
+            <p class="card-text"><%= truncate(blog.description, length: 100) %></p>
+            <a href="#" class="btn btn-primary mt-auto">Read Blog</a>
+          </div>
+        </div>
+    </div>
+  <% end %>
+</div>
