--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,20 +33,22 @@
   </div>
   <h5>Tasks</h5>
   <% @project.tasks.order(created_at: :desc).each do |task| %>
-    <% if task.persisted? %>
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="d-flex justify-content-between">
-            <span class="badge badge-<%= task.badge_color %> mb-3"><%= task.status %></span>
-            <div>
-              <%= link_to "edit",edit_project_task_path(task.project, task), class: 'btn btn-warning btn-sm'%>
-              <%= link_to 'Destroy', [task.project, task], method: :delete, class:"btn btn-danger btn-sm", data: { confirm: 'Are you sure?' } %>
+    <%= link_to projects_path, class:"curser-pointer" do %>
+      <% if task.persisted? %>
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="d-flex justify-content-between">
+              <span class="badge badge-<%= task.badge_color %> mb-3"><%= task.status %></span>
+              <div>
+                <%= link_to "edit",edit_project_task_path(task.project, task), class: 'btn btn-warning btn-sm'%>
+                <%= link_to 'Destroy', [task.project, task], method: :delete, class:"btn btn-danger btn-sm", data: { confirm: 'Are you sure?' } %>
+              </div>
             </div>
+            <h5 class="card-title"><%= task.name %></h5>
+            <%= task.description%>
           </div>
-          <h5 class="card-title"><%= task.name %></h5>
-          <%= task.description%>
         </div>
-      </div>
+      <% end %>
     <% end %>
   <% end %>
   </div>
